@@ -1,6 +1,9 @@
 <h3>0.13.7</h3>
 <ul>
     <li>#232 PersistentStringParameter not supported</li>
+    <li>#233 Error overlay over whole of screen if connection is lost. Add Notification group to configure the behaviour
+        in IDE settings.
+    </li>
 </ul>
 <h3>0.13.6</h3>
 <ul>
