@@ -1,5 +1,6 @@
 Version 0.13.6
     * #232 PersistentStringParameter not supported
+    * #233 Error overlay over whole of screen if connection is lost. Add Notification group to configure the behaviour in IDE settings.
 
 Version 0.13.6
     * #225 Git Branch Parameter is unsupported
